--- a/src/components/NowTrading.css
+++ b/src/components/NowTrading.css
@@ -1,6 +1,7 @@
 .NowTrading-elementList{
     overflow: scroll;
     margin-left: 15px;
+    margin-top: 10px;
 }
 
 .NowTrading-element{
@@ -11,7 +12,7 @@
     margin-bottom: 3px;
     font-size: 12px;
     overflow: hidden;
-    border-radius: 3%
+    border-radius: 3%;
 }
 
 ::-webkit-scrollbar{
