--- a/src/components/NowTrading.css
+++ b/src/components/NowTrading.css
@@ -1,18 +1,17 @@
 .NowTrading-elementList{
     overflow: scroll;
     margin-left: 15px;
-    margin-top: 10px;
 }
 
 .NowTrading-element{
     width: 180px;
-    height: 50px;
+    height: 150px;
     background-color: #c0cbd4;
     color: black;
     margin-bottom: 3px;
     font-size: 12px;
     overflow: hidden;
-    border-radius: 3%;
+    border-radius: 3%
 }
 
 ::-webkit-scrollbar{
