--- a/src/components/Sales.css
+++ b/src/components/Sales.css
@@ -1,26 +1,25 @@
-.Sales-box{
+.Sales-box, .Sales-input{
     width: 180px;
     height: 45px;
     background-color: #c0cbd4;
     margin: 2px;
-}
-
-.Sales-input{
-    width: 176px;
-    height: 42px;
-    background-color: #c0cbd4;
-    margin: 2px;
+    border-radius: 3%;
 }
 
 .Sales-start-btn{
+  position: fixed;
+    margin-top: 10px;
     width: 90px;
     height: 60px;
     position: relative;
     left: 120px;
-    top: 50px;
+    top: 40px;
     color: #c0cbd4;
 }
 
 .Sales-color{
-    color: aliceblue;
+  margin-top: auto;
+  margin-bottom: 10px;
+  font-size: 15pt;
+  color: aliceblue;
 }
